kubernetes/apps/database/userinit-controller/app/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pgo-network-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crunchy-userinit-controller
  ingress:
    # nothing allowed
    - {}
  egress:
    - toEndpoints:
      - matchLabels:
          postgres-operator.crunchydata.com/cluster: elephant
      toPorts:
        - ports:
          - port: "5432"
            protocol: TCP
    - toEntities:
      - kube-apiserver
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
